--- a/index/test.html
+++ b/index/test.html
@@ -3,28 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>test</title>
-    <script src="./plugin/vue.js" charset="utf-8"></script>
+    <script src="../plugin/vue.js" charset="utf-8"></script>
   </head>
   <body>
 <div class="test">
-<template v-for="todo in messages">
-  <div id="temp">{{todo.name}}</div>
-  <div class="demo"></div>
-</template>
-<!-- <envelope-li
-  v-for="m in messages"
-  v-bind:todo="m.name"></envelope-li> -->
+<demo-div v-bind:title="title"></demo-div>
 </div>
 <script type="text/javascript">
-// Vue.component('envelope-li', {
-//   props: ['todo'],
-//   template:'<div id="temp">{{todo}}</div><div class="demo"></div>'
-// });
+
+Vue.component('demo-div',{
+  props:['title'],
+  template:'#testdemo'
+});
+
 new Vue({
   el:'.test',
   data:{
     message:'message',
-    messages:[{name:'test1'},{name:'test2'}]
+    messages:[{name:'test1'},{name:'test2'}],
+    title:'test'
   }
 });
 </script>
