--- a/index/component.html
+++ b/index/component.html
@@ -1,37 +1,1 @@
-<template id="dropdown-messages">
-<li class="dropdown">
-  <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-    <i v-bind:class="envelope[0].icon"></i> <i class="fa fa-caret-down"></i>
-  </a>
-  <ul class="dropdown-menu dropdown-messages">
-    <template v-for="ul in envelope[0].uls">
-      <li>
-        <a href="#">
-          <div>
-            <strong>{{ul.name}}</strong>
-            <span class="pull-right text-muted"></span>
-            <span class="pull-right text-muted">
-              <em>{{ul.rightText}}</em>
-            </span>
-          </div>
-          <div>{{ul.message}}</div>
-        </a>
-        </li>
-        <li class="divider"></li>
-    </template>
-    <li>
-      <a class="text-center" href="#">
-        <strong>Read All Messages</strong>
-        <i class="fa fa-angle-right"></i>
-      </a>
-    </li>
-  </ul>
-</li>
-</template>
-
-<script type="text/javascript">
-Vue.component('demo-div',{
-  props:['title'],
-  template:'#testdemo'
-});
-</script>
+<div class="tt">{{title}}</div>
